[gd_scene load_steps=4 format=3 uid="uid://draj06x6rcddu"]

[ext_resource type="Script" uid="uid://d1ut8yiaob8j0" path="res://UI/menu_ui_2d.gd" id="1_yovnq"]
[ext_resource type="Shader" uid="uid://lche2w7q2bgu" path="res://UI/menu_ui_2d.gdshader" id="2_1i1fg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bufj0"]
shader = ExtResource("2_1i1fg")
shader_parameter/color = Color(1, 1, 1, 1)

[node name="MenuUi2d" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yovnq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game - Hand Tracking"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="Cursor" type="ColorRect" parent="."]
process_mode = 4
material = SubResource("ShaderMaterial_bufj0")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
